[gd_scene load_steps=15 format=3 uid="uid://3h28lxb02vva"]

[ext_resource type="Script" path="res://scripts/Persoangem.gd" id="1_j1ocp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d00tg"]
size = Vector2(16, 16)

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_e4v2p"]

[sub_resource type="Animation" id="Animation_gbqtq"]
resource_name = "idle_l"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_01l4k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7h4ml"]
resource_name = "idle_r"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8ix7p"]
resource_name = "walk_l"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_eiqwr"]
resource_name = "walk_r"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qiy6c"]
resource_name = "walk_u"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_sc7vp"]
resource_name = "idle_u"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3nspj"]
resource_name = "walk_d"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [8, 7, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7f7uw"]
resource_name = "idle_d"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_07aia"]
_data = {
"RESET": SubResource("Animation_01l4k"),
"idle_d": SubResource("Animation_7f7uw"),
"idle_l": SubResource("Animation_gbqtq"),
"idle_r": SubResource("Animation_7h4ml"),
"idle_u": SubResource("Animation_sc7vp"),
"walk_d": SubResource("Animation_3nspj"),
"walk_l": SubResource("Animation_8ix7p"),
"walk_r": SubResource("Animation_eiqwr"),
"walk_u": SubResource("Animation_qiy6c")
}

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3hvrt"]
b = Vector2(0, 8)

[node name="Personagem" type="CharacterBody2D"]
script = ExtResource("1_j1ocp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_d00tg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, 8)
scale = Vector2(0.05, 0.05)
hframes = 9
frame = 5

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendSpace2D_e4v2p")
anim_player = NodePath("../CalebAnimation")
parameters/blend_position = Vector2(0, 0)

[node name="CalebAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_07aia")
}

[node name="MorganaAnimator" type="AnimationPlayer" parent="."]

[node name="Area U" type="Area2D" parent="."]

[node name="U" type="CollisionShape2D" parent="Area U"]
position = Vector2(8, -8)
shape = SubResource("SegmentShape2D_3hvrt")

[node name="Area D" type="Area2D" parent="."]

[node name="D" type="CollisionShape2D" parent="Area D"]
position = Vector2(8, 16)
shape = SubResource("SegmentShape2D_3hvrt")

[node name="Area R" type="Area2D" parent="."]

[node name="R" type="CollisionShape2D" parent="Area R"]
position = Vector2(16, 8)
rotation = -1.5708
shape = SubResource("SegmentShape2D_3hvrt")

[node name="Area L" type="Area2D" parent="."]

[node name="L" type="CollisionShape2D" parent="Area L"]
position = Vector2(-8, 8)
rotation = -1.5708
shape = SubResource("SegmentShape2D_3hvrt")

[connection signal="area_entered" from="Area U" to="." method="U_obstacle"]
[connection signal="area_exited" from="Area U" to="." method="U_free"]
[connection signal="area_entered" from="Area D" to="." method="D_obstacle"]
[connection signal="area_exited" from="Area D" to="." method="D_free"]
[connection signal="area_entered" from="Area R" to="." method="R_obstacle"]
[connection signal="area_exited" from="Area R" to="." method="R_free"]
[connection signal="area_entered" from="Area L" to="." method="L_obstacle"]
[connection signal="area_exited" from="Area L" to="." method="L_free"]
